hard-gists/a400d6c20a52f0b3cd5415e833263b1f/run.log
=== Docker Run Log for a400d6c20a52f0b3cd5415e833263b1f ===
Started at: Mi 29. Okt 18:52:35 CET 2025

[2025-10-29 18:52:36] START: Running container for a400d6c20a52f0b3cd5415e833263b1f
[2025-10-29 18:52:36] SUCCESS: Container 8268375932d665ee0546efc730f412cda634c5d02e2bd5f2a4414ebc6bffa960 started for a400d6c20a52f0b3cd5415e833263b1f
=== Container logs for a400d6c20a52f0b3cd5415e833263b1f ===
  File "/snippet.py", line 18
    print "Usage: decode_vcrpy.py path/to/fixture.yaml [response number, ex '0']"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a400d6c20a52f0b3cd5415e833263b1f ===
[2025-10-29 18:52:38] INFO: Container 8268375932d665ee0546efc730f412cda634c5d02e2bd5f2a4414ebc6bffa960 has stopped
